--- a/vignettes/censCov-examples.html
+++ b/vignettes/censCov-examples.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sy Han (Steven) Chiou" />
 
-<meta name="date" content="2019-05-19" />
+<meta name="date" content="2019-05-21" />
 
 <title>Introduction to censCov</title>
 
@@ -291,7 +291,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Introduction to <em>censCov</em></h1>
 <h4 class="author">Sy Han (Steven) Chiou</h4>
-<h4 class="date">2019-05-19</h4>
+<h4 class="date">2019-05-21</h4>
 
 </div>
 
@@ -308,7 +308,7 @@ div.tocify {
 <div id="the-thlm-function" class="section level2">
 <h2>The <code>thlm</code> function</h2>
 <p>The <code>thlm</code> function presents the threshold regression approaches for linear regression models with a covariate that is subject to random censoring. The threshold regression methods allow for immediate testing of the significance of the effect of a censored covariate. The <strong><code>censCov</code></strong> package can be installed from CRAN with</p>
-<pre class="r"><code>&gt; install.packages(&quot;devtools&quot;)</code></pre>
+<pre class="r"><code>&gt; install.packages(&quot;censCov&quot;)</code></pre>
 <p>or from GitHub with</p>
 <pre class="r"><code>&gt; devtools::install_github(&quot;stc04003/censCov&quot;)</code></pre>
 <p>The arguments of the <code>thlm</code> function are as follows:</p>
